css/style.css
* {
	box-sizing: border-box;
}

html {
	scroll-behavior: smooth;
	scroll-padding-top: 70px;
}

body,
html {
	height: 100%;
	margin: 0;
	font-size: 16px;
	font-weight: 400;
	font-family: "raleway", sans-serif;
	/* font-family: "Laro", sans-serif; */
	line-height: 1.8em;
	color: black;
}

section {
	position: absolute;
	min-height: 100%;
	padding: 60px 10% 90px 10%;
}

nav {
	display: flex;
}

#menu {
	position: fixed;
	top: 0px;
	width: 100%;
	height: 70px;
	z-index: 9999;
	display: none;
	justify-content: space-between;
	align-items: center;
	min-height: 1vh;
	padding-left: 1%;
	background-color: black;
	color: white;
}

.logo {
	text-transform: uppercase;
	letter-spacing: 3px;
	font-size: 22px;
}

.logo a {
	text-decoration: none;
	color: white;
}

.nav-links {
	display: flex;
	justify-content: space-around;
	align-items: center;
	width: 40%;
}

.nav-links a {
	text-decoration: none;
	letter-spacing: 1px;
	font-weight: bold;
	font-size: 16px;
	color: white;
	padding-bottom: 3%;
}

.nav-links li {
	list-style: none;
}

.active {
	border-bottom: 2px solid white;
	transition: all 0.6s ease;
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
}

.nav-links li a:hover {
	color: #f0e089;
	transition: all 0.4s;
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
}

.burger {
	display: none;
	padding-right: 5%;
	cursor: pointer;
	align-self: center;
}

.burger div {
	width: 25px;
	height: 3px;
	background-color: yellow;
	margin: 5px;
	transition: all 0.3s ease;
}

@media screen and (max-width: 1200px) {
	.nav-links {
		width: 50%;
	}
}

@media screen and (max-width: 768px) {
	body {
		overflow-x: hidden;
	}
	.nav-links {
		position: absolute;
		right: 0px;
		height: 92vh;
		top: 8vh;
		background-color: black;
		display: flex;
		flex-direction: column;
		align-items: center;
		width: 50%;
		transform: translateX(100%);
		transition: transform 0.5s ease-in;
		z-index: 1;
		margin-top: 0;
		padding-top: 0;
	}

	.nav-links li {
		opacity: 0;
	}
	.burger {
		display: block;
	}
}

@media (max-width: 568px) {
	.pimg1,
	.pimg2,
	.pimg3 {
		background-attachment: fixed;
	}
}

.nav-active {
	transform: translateX(0%);
}

@keyframes navLinkFade {
	from {
		opacity: 0;
		transform: translateX(50px);
	}
	to {
		opacity: 1;
		transform: translateX(0px);
	}
}

.toggle .line1 {
	transform: rotate(-45deg) translate(-5px, 6px);
}
.toggle .line2 {
	opacity: 0;
}
.toggle .line3 {
	transform: rotate(45deg) translate(-5px, -6px);
}

.pimg1,
.pimg2,
.pimg3,
.pimg4 {
	position: relative;
	/* opacity: 0.80; */
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	background-attachment: fixed;
}

.pimg1 {
	/* background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), url(../imgs/homebg.jpg); */
	background-image: linear-gradient(rgba(255, 255, 255, .2), rgba(255, 255, 255, .2)), url(../imgs/sf.jpg);
	min-height: 100%;
}

.pimg2 {
	background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5)), url(../imgs/about2.jpg);
	/* background-image: url(../imgs/aboutbg.jpg); */
	height: 100%;
}

.pimg3 {
	background-image: linear-gradient(rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.6)), url(../imgs/test24.jpg);
	min-height: 100%;
}

.pimg4 {
	background-image: url(../imgs/projectsbg.jpg);
	min-height: 100%;
}

#showcase {
	text-align: center;
	color: black;
	height: 100%;
}

#showcase .showcase-names {
	position: absolute;
	top: 35%;
	width: 100%;
}

@media (max-width: 568px) {
	#showcase .showcase-names {
		position: absolute;
		top: 17%;
		width: 100%;
	}

	.home-links a {
		color: black;
		display: block;
		text-decoration: none;
		padding: 0;
		margin-bottom: 10px;
		font-weight: 600;
		letter-spacing: 1px;
	}
}

#showcase h1 {
	text-transform: uppercase;
	text-emphasis: bolder;
	font-size: 60px;
	letter-spacing: 7px;
	line-height: 55px;
}

.home-links a {
	color: black;
	/* position: relative; */
	text-decoration: none;
	padding-left: 30px;
	padding-right: 30px;
	font-weight: 600;
	letter-spacing: 1px;
}

.home-links a:hover {
	color: rgb(71, 66, 66);
	font-weight: bolder;
	font-size: 20px;
	transition: all 0.3s;
	-webkit-transition: all 0.4s;
	-moz-transition: all 0.4s;
}

.section-headings {
	letter-spacing: 1px;
	font-size: 30px;
	margin: 0;
	padding-bottom: 10px;
	text-align: center;
}

hr {
	width: 50%;
	border-top: 1px solid black;
	border-bottom: 1px solid rgba(255, 255, 255, 0.2);
}

.abt-container {
	height: 100%;
	display: flex;
	flex-wrap: wrap;
}

.about-image {
	flex: 1 1 300px;
	align-self: center;
	padding-right: 5%;
}

.about-image > img {
	max-width: 100%;
	max-height: 100%;
}

.about-content {
	flex: 1 1 300px;
	/* background-color: #34373c; */
	text-align: center;
	color: black;
	display: flex;
	flex-direction: column;
}

.about-content > p {
	font-weight: 700;
}

.about-content > div > ul {
	display: flex;
	justify-content: space-evenly;
	align-items: flex-end;
	padding: 0;
	/* margin-top: auto; */
}

.about-content > div > ul > li {
	list-style: none;
}

i {
	color: black;
}

a[href="https://www.linkedin.com/in/sadeemk/"] i:hover {
	color: #0e76a8;
	transition: all 0.4s ease;
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
}

a[href="https://github.com/Sadeemk"] i:hover {
	color: #f1502f;
	transition: all 0.4s ease;
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
	/* 03fffb */
}

a[href="mailto:imsadeem98@gmail.com"] i:hover {
	color: #03fffb;
	transition: all 0.4s ease;
	-webkit-transition: all 0.5s;
	-moz-transition: all 0.5s;
}

.job {
	/* background-color: #edf1f0; */
	background-color: rgba(245, 245, 245, .7);
	/* border: 1px solid gray; */
	width: 70%;
	height: 100%;
	margin: 100px auto;
	text-align: center;
}

.job-company {
	padding-top: 15px;
}

.company-img {
	max-width: 75px;
	max-height: 75px;
}

.job > p:last-child {
	padding-bottom: 65px;
}

footer p {
	color: white;
	background-color: #34373c;
	background-color: #34373c;
	margin-top: 0px;
}

